# piclaw

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  justfile  package.json
.github/workflows/: docker.yml
.opencode/command/: rmslop.md
.pi/extensions/: skill-deps.ts
tools/mdvector/: README.md  SKILL.md  pyproject.toml
tools/mdvector/src/mdvector/: __init__.py  cli.py  embed.py  scanner.py  store.py  sync.py
