[project]
name = "mdvector"
version = "1.0.0"
description = "Sync markdown files to vector databases"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.4.1",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
]

[project.scripts]
mdvector = "mdvector.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdvector"]
